<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tiagov.rideabike1.SigninActivity">

        <LinearLayout
            android:id="@+id/name_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_address"
                    android:inputType="textCapSentences"
                    android:maxLines="1" />


                <EditText
                    android:id="@+id/email_signin_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            <!--
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateNasc"
                    android:inputType="none"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout> -->

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_log_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            <!--
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/country"
                        android:layout_width="165dp"
                        android:layout_height="match_parent"
                        android:hint="@string/country"
                        android:inputType="textCapCharacters"
                        android:maxLines="1" />

                    <EditText
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/state"
                        android:inputType="textCapSentences"
                        android:maxLines="1" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    android:inputType="textCapSentences"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout> -->

            <Button
                android:id="@+id/email_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="regNew"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
</LinearLayout>